# FossilTracker

./: .gitignore  README.md  pyproject.toml
assets/css/: fossil-catalogue.css
data/: fossiltracker.db
docker/: Dockerfile  README.md  docker-compose.yml
migrations/: 002_images_and_notes.py  003_remove_legacy_image_paths.py  004_taxonomy_and_geological_context.py  005_remove_legacy_context_fields.py  006_provenance_and_ethics_layer.py  007_remove_redundant_acquisition_fields.py  008_related_field_notes_links.py  009_note_visibility_and_remove_specimen_notes.py  010_configurable_measurement_types.py  011_specimen_measurements.py  012_remove_geological_age_notes.py  013_remove_measurement_type_active.py  014_licence_reference_data.py  015_remove_observation_related_fields.py  016_taxonomy_one_to_one_specimens.py  017_related_link_metadata.py  018_image_and_document_type_reference_data.py  019_populate_document_type_descriptions.py  020_add_taxonomy_subclass.py  021_add_ammonite_measurement_types.py  022_add_orthocone_measurement_types.py  023_round_specimen_measurements.py  024_remove_public_visibility.py
scripts/: render-dev-json.sh  render-json.sh  run-dev-tracker.sh  run-tests.sh  run-tracker.sh
src/: render_specimen.py  streamlit_app.py
src/db/: __init__.py  acquisitions.py  core.py  document_types.py  geological_ages.py  image_types.py  images.py  licences.py  localities.py  measurement_types.py  observations.py  preparation_types.py  related_links.py  specimen_measurements.py  specimens.py  taxonomy.py
src/fossil_tracker/: __init__.py  app.py  cli.py  config.py  db.py  markdown_renderer.py
src/ui/: __init__.py  add_specimen.py  common.py  documents.py  edit_specimen.py  images.py  measurements.py  notes.py  provenance.py  reference_data.py  related_links.py  search.py  specimen_export.py  taxonomy.py
tests/: test_app.py  test_config.py  test_db.py  test_markdown_renderer.py  test_measurements.py
(+1 files in other folders)
