[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fossil-tracker"
version = "1.5.1"
description = "Fossil Collection Tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "streamlit>=1.59,<2",
  "datasette",
  "yoyo-migrations"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.scripts]
fossil-tracker = "fossil_tracker.cli:main"

[tool.setuptools]
py-modules = ["streamlit_app"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["db*", "fossil_tracker*", "ui*"]

[tool.setuptools.package-data]
fossil_tracker = ["assets/images/*.png"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
